# auto-judge-base

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/autojudge_base/: __init__.py  cli.py  click_plus.py  judge_runner.py  llm_config.py  nugget_doc_models.py  report.py  request.py  utils.py
src/autojudge_base/_commands/: _describe.py  _run.py
src/autojudge_base/document/: document.py  text_chunker.py
src/autojudge_base/leaderboard/: DESIGN.md  README.md  __init__.py  format_detection.py  leaderboard.py  verification.py
src/autojudge_base/llm/: __init__.py  llm_config.py
src/autojudge_base/llm_resolver/: ORGANIZER.md  README.md  model_resolver.py
src/autojudge_base/nugget_data/: __main__.py  io.py  nugget_data.py  nugget_data_example.py  verification.py
src/autojudge_base/qrels/: README.md  __init__.py  qrels.py  verification.py
src/autojudge_base/workflow/: README.md  __init__.py  paths.py  settings.py  workflow.py
tests/: __init__.py  test_auto_judge_protocol.py  test_cli_workflow_flags.py  test_describe_cli.py  test_export_corpus.py  test_ir_datasets_integration.py  test_leaderboard_interface.py  test_model_resolver.py  test_nugget_data_builder.py  test_pyircore.py  test_rag_topics.py  test_rag_topics_error_messages.py  test_simplistic_access_to_runs.py  test_workflow.py
tests/resources/: example-rag-topics-invalid.jsonl  example-rag-topics.jsonl
tests/resources/example-irds-corpus/: foo
tests/resources/spot-check-dataset/: trec-leaderboard.txt
tests/resources/spot-check-fully-local/: README.md
(+3 files in other folders)
